-- =============================================
-- MASTER_CATALOG_TYPE: Quản lý loại danh mục
-- =============================================

CREATE TABLE MASTER_CATALOG_TYPE (
    ID          NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    TYPE        VARCHAR2(50)   NOT NULL UNIQUE,
    NAME        NVARCHAR2(100) NOT NULL,
    DESCRIPTION NVARCHAR2(500),
    ICON        VARCHAR2(100),
    SORT_ORDER  NUMBER(10)     DEFAULT 0,
    ACTIVE      NUMBER(1)      DEFAULT 1 NOT NULL,
    CREATED_AT  TIMESTAMP      DEFAULT SYSTIMESTAMP,
    UPDATED_AT  TIMESTAMP      DEFAULT SYSTIMESTAMP
);

CREATE UNIQUE INDEX IDX_CATALOG_TYPE_CODE ON MASTER_CATALOG_TYPE(TYPE);

-- Seed data
INSERT INTO MASTER_CATALOG_TYPE (TYPE, NAME, DESCRIPTION, ICON, SORT_ORDER) VALUES ('ORGANIZATION', 'Cơ cấu tổ chức', 'Danh mục đơn vị tổ chức EVNNPC', 'tuiIconBuilding', 1);
INSERT INTO MASTER_CATALOG_TYPE (TYPE, NAME, DESCRIPTION, ICON, SORT_ORDER) VALUES ('PRODUCT', 'Sản phẩm', 'Danh mục sản phẩm tín dụng', 'tuiIconBox', 2);
INSERT INTO MASTER_CATALOG_TYPE (TYPE, NAME, DESCRIPTION, ICON, SORT_ORDER) VALUES ('REGION', 'Vùng miền', 'Danh mục vùng miền', 'tuiIconMapPin', 3);
INSERT INTO MASTER_CATALOG_TYPE (TYPE, NAME, DESCRIPTION, ICON, SORT_ORDER) VALUES ('CUSTOM', 'Tùy chỉnh', 'Danh mục tùy chỉnh', 'tuiIconSettings', 4);

-- FK từ MASTER_CATALOG.TYPE → MASTER_CATALOG_TYPE.TYPE
ALTER TABLE MASTER_CATALOG ADD CONSTRAINT FK_CATALOG_TYPE
    FOREIGN KEY (TYPE) REFERENCES MASTER_CATALOG_TYPE(TYPE);

COMMIT;
